--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -4,34 +4,27 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
+    android:background="@color/cardViewBackground"
     tools:context=".Fragments.ProfileFragment">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="290dp"
+        android:background="@drawable/settings_background_shape">
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/profile_image"
             android:layout_width="110dp"
             android:layout_height="110dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.07999998" />
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="20dp"/>
 
         <com.github.ybq.android.spinkit.SpinKitView
             android:id="@+id/spinKit_profile"
             android:layout_width="110dp"
             android:layout_height="110dp"
-            android:visibility="visible"
-            app:SpinKit_Color="@color/primaryVariant"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.07999998"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="20dp"
             style="@style/SpinKitView.DoubleBounce"/>
 
         <TextView
@@ -39,35 +32,43 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="20sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/profile_image"
-            app:layout_constraintVertical_bias="0.01999998" />
+            android:textColor="@color/white"
+            android:layout_centerHorizontal="true"
+            android:layout_below="@id/profile_image"
+            android:layout_marginTop="10dp"/>
 
         <TextView
             android:id="@+id/retrieved_email"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="20sp"
-            app:layout_constraintBottom_toTopOf="@+id/reg_name_lay"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/retrieved_name"
-            app:layout_constraintVertical_bias="0.100000024" />
+            android:textColor="@color/white"
+            android:layout_centerHorizontal="true"
+            android:layout_below="@id/retrieved_name"
+            android:layout_marginTop="10dp"/>
+
+    </RelativeLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="210dp"
+        android:layout_marginEnd="15dp"
+        android:layout_marginBottom="15dp"
+        android:background="@drawable/settings_background_shape2">
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/reg_name_lay"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="300dp"
             android:layout_height="70dp"
+            android:layout_marginTop="30dp"
             app:endIconMode="clear_text"
             app:hintTextColor="@color/primary"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/retrieved_name"
-            app:layout_constraintVertical_bias="0.17000002"
+            app:layout_constraintTop_toTopOf="parent"
             app:startIconDrawable="@drawable/ic_baseline_person_24">
 
             <com.google.android.material.textfield.TextInputEditText
@@ -125,11 +126,11 @@
             android:id="@+id/update_button"
             android:layout_width="150dp"
             android:layout_height="wrap_content"
+            android:background="@drawable/round_button"
+            android:enabled="false"
             android:text="@string/update"
             android:textAllCaps="false"
             android:textSize="18sp"
-            android:enabled="false"
-            android:background="@drawable/round_button"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
