--- a/app/src/main/res/layout/custom_loading_dialog.xml
+++ b/app/src/main/res/layout/custom_loading_dialog.xml
@@ -1,39 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+    android:layout_width="140dp"
+    android:layout_height="140dp"
     android:background="@drawable/custom_loading_cardview">
 
-    <androidx.cardview.widget.CardView
-        android:layout_width="150dp"
-        android:layout_height="150dp"
+    <com.github.ybq.android.spinkit.SpinKitView
+        android:id="@+id/spinKit_loading_dialog"
+        style="@style/SpinKitView.DoubleBounce"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:background="@drawable/custom_loading_cardview">
+        android:layout_marginTop="25dp"
+        app:SpinKit_Color="@color/primaryVariant" />
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <com.github.ybq.android.spinkit.SpinKitView
-                android:id="@+id/spinKit_loading_dialog"
-                style="@style/SpinKitView.DoubleBounce"
-                app:SpinKit_Color="@color/primaryVariant"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerHorizontal="true"
-                android:layout_marginTop="25dp"/>
-
-            <TextView
-                android:id="@+id/textView_loading_dialog"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/spinKit_loading_dialog"
-                android:layout_centerHorizontal="true"
-                android:layout_marginTop="25dp"/>
-        </RelativeLayout>
-
-    </androidx.cardview.widget.CardView>
+    <TextView
+        android:id="@+id/textView_loading_dialog"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/spinKit_loading_dialog"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="25dp" />
 
 </RelativeLayout>
