--- a/app/src/main/res/layout/activity_parking_place.xml
+++ b/app/src/main/res/layout/activity_parking_place.xml
@@ -77,6 +77,16 @@
             android:textColor="@color/white"
             android:textSize="16sp" />
 
+        <ImageButton
+            android:id="@+id/button_add_to_favorites"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/image_location_icon"
+            android:layout_alignParentEnd="true"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="50dp"
+            android:background="@drawable/ic_favorite_border"/>
+
     </RelativeLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
