--- a/app/src/main/res/menu/bottom_menu.xml
+++ b/app/src/main/res/menu/bottom_menu.xml
@@ -5,6 +5,10 @@
         android:id="@+id/nav_home"
         android:icon="@drawable/ic_baseline_home_24"
         />
+    <item android:title="Favorites"
+        android:id="@+id/nav_favorites"
+        android:icon="@drawable/ic_favorites"
+        />
     <item android:title="Profile"
         android:id="@+id/nav_profile"
         android:icon="@drawable/ic_baseline_person_24"
